k8s/40-albconfig-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  # 这个名字会出现在 ACK 控制台的 Ingress Class 下拉框里
  name: gy-alb
spec:
  controller: ingress.k8s.alibabacloud/alb
  parameters:
    apiGroup: alibabacloud.com
    kind: AlbConfig
    name: gy-alb
