k8s/10-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  namespace: gy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: guangyang-registry-vpc.cn-heyuan.cr.aliyuncs.com/guangyang/python:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: python
  namespace: gy
spec:
  selector:
    app: python
  ports:
    - name: http
      port: 8000
      targetPort: http
